# SEAI

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  seai.bat  seai.ps1
.claude/: settings.json  settings.local.json  work.md
.github/: dependabot.yml
.github/workflows/: ci.yml
data/: config.example.json
rust/: Cargo.toml
rust/src/: circuit_breaker.rs  command_sandbox.rs  context_manager.rs  event_bus.rs  file_ops.rs  http_client.rs  knowledge_graph.rs  lib.rs  memory_engine.rs  sandbox.rs  search_client.rs  tokenizer.rs
scripts/: github_backup.py
src/seai/: __init__.py  app.py  cli.py  mcp_server.py  seai_cli.py  seai_launch.py  seai_window.py
src/seai/api/: __init__.py  backup.py  chat.py  logs.py  models.py  router.py  sessions.py  skills.py  system.py  whitelist.py
src/seai/channels/: __init__.py  base_channel.py  channel_manager.py  message_protocol.py
src/seai/core/: __init__.py  _rust.py  agent_factory.py  agent_registry.py  circuit_breaker.py  code_graph.py  config.py  constraint_engine.py  context_manager.py  context_retriever.py  continuous_evolution.py  conversation_service.py  crypto.py  database.py  error_handler.py  evolution_service.py  evolution_tester.py  execution_pipeline.py  feedback_loop.py  hooks.py  lazy_import.py  lifecycle.py  llm_manager.py  media_encoder.py  memory_engine.py  message_builder.py  model_downloader.py  net.py  permissions.py  plan_exec_mode.py  prompt_composer.py  protocols.py  reflection_engine.py  role_definitions.py  seai_error.py  security.py  session_manager.py  skill_system.py  terminal.py  tool_cache.py  (+3 more)
src/seai/developer/: cli.py
src/seai/knowledge/: neo4j_engine.py
src/seai/prompts/: prompt_config.json  prompt_engine.py
src/seai/se_tool/: __init__.py
src/seai/skills/: __init__.py
src/seai/utils/: __init__.py  logger.py
tests/: __init__.py  conftest.py  test_agent_e2e.py  test_agent_registry.py  test_api_e2e.py  test_auth_service.py  test_benchmark.py  test_circuit_breaker.py  test_config.py  test_config_e2e.py  test_crypto.py  test_database.py  test_error_handler.py  test_event_bus.py  test_evolution.py  test_evolution_assessment.py  test_execution_pipeline.py  test_harness_e2e.py  test_health_check.py  test_llm_fallback.py  test_llm_manager.py  test_memory.py  test_memory_engine.py  test_model_downloader.py  test_repository.py  test_sandbox.py  test_seai_error.py  test_session_manager.py  test_sub_agent.py  test_tool_cache.py  test_tool_registry.py
tests/integration/: test_ooda_decide.py  test_ooda_integration.py  test_ooda_multiturn.py  test_ooda_orient.py
tests/smoke/: test_ooda_real_llm.py
tests/unit/: test_ooda_act.py  test_ooda_context.py  test_ooda_event_bus.py  test_ooda_evolution_bridge.py  test_ooda_loop.py  test_ooda_observe.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  index.css
web/src/api/: client.ts
web/src/components/: InputArea.tsx  (+3 more)
www/: index.html  mobile.css  qwebchannel.js
(+117 files in other folders)
